--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -243,11 +243,11 @@ extra:
     branch: release-1.2
     tag: v1.2.0
   operator:
-    release: 1.4.2
-    tag: v1.4.2
-    branch: release-1.4
-    upgrade_from: 3.0.0
-    upgrade_to: 3.4.1
+    release: 1.5.0
+    tag: v1.5.0
+    branch: release-1.5
+    upgrade_from: 3.5.0
+    upgrade_to: 3.5.x
   exporter:
     release: 3.3.0
     branch: release-3.3
@@ -710,28 +710,28 @@ nav:
       - Export data from NebulaGraph: nebula-exchange/use-exchange/ex-ug-export-from-nebula.md
     - Exchange FAQ: nebula-exchange/ex-ug-FAQ.md
 
-#   - Operator:
-#       - What is NebulaGraph Operator: nebula-operator/1.introduction-to-nebula-operator.md
-#       - Overview of using NebulaGraph Operator: nebula-operator/6.get-started-with-operator.md
-#       - Deploy NebulaGraph Operator: nebula-operator/2.deploy-nebula-operator.md
-#       - Deploy clusters: 
-# #ent    
-#         - Deploy LM: nebula-operator/3.deploy-nebula-graph-cluster/3.0.deploy-lm.md     
-#         - Deploy clusters with Kubectl: nebula-operator/3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md
-#         - Deploy clusters with Helm: nebula-operator/3.deploy-nebula-graph-cluster/3.2create-cluster-with-helm.md
-#       - Connect to NebulaGraph databases: nebula-operator/4.connect-to-nebula-graph-service.md
-#       - Configure clusters:
-#         - Custom configuration parameters for a NebulaGraph cluster: nebula-operator/8.custom-cluster-configurations/8.1.custom-conf-parameter.md
-#         - Reclaim PVs: nebula-operator/8.custom-cluster-configurations/8.2.pv-reclaim.md 
-# #ent
-#         - Balance storage data after scaling out: nebula-operator/8.custom-cluster-configurations/8.3.balance-data-when-scaling-storage.md
-#         - Manage cluster logs: nebula-operator/8.custom-cluster-configurations/8.4.manage-running-logs.md
-#       - Upgrade NebulaGraph clusters: nebula-operator/9.upgrade-nebula-cluster.md
-#       - Specify a rolling update strategy: nebula-operator/11.rolling-update-strategy.md
-# #ent
-#       - Backup and restore: nebula-operator/10.backup-restore-using-operator.md
-#       - Self-healing: nebula-operator/5.operator-failover.md
-#       - FAQ: nebula-operator/7.operator-faq.md
+  - NebulaGraph Operator:
+      - What is NebulaGraph Operator: nebula-operator/1.introduction-to-nebula-operator.md
+      - Overview of using NebulaGraph Operator: nebula-operator/6.get-started-with-operator.md
+      - Deploy NebulaGraph Operator: nebula-operator/2.deploy-nebula-operator.md
+      - Deploy clusters: 
+#ent    
+        - Deploy LM: nebula-operator/3.deploy-nebula-graph-cluster/3.0.deploy-lm.md     
+        - Deploy clusters with Kubectl: nebula-operator/3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md
+        - Deploy clusters with Helm: nebula-operator/3.deploy-nebula-graph-cluster/3.2create-cluster-with-helm.md
+      - Connect to NebulaGraph databases: nebula-operator/4.connect-to-nebula-graph-service.md
+      - Configure clusters:
+        - Custom configuration parameters for a NebulaGraph cluster: nebula-operator/8.custom-cluster-configurations/8.1.custom-conf-parameter.md
+        - Reclaim PVs: nebula-operator/8.custom-cluster-configurations/8.2.pv-reclaim.md 
+#ent
+        - Balance storage data after scaling out: nebula-operator/8.custom-cluster-configurations/8.3.balance-data-when-scaling-storage.md
+        - Manage cluster logs: nebula-operator/8.custom-cluster-configurations/8.4.manage-running-logs.md
+      - Upgrade NebulaGraph clusters: nebula-operator/9.upgrade-nebula-cluster.md
+      - Specify a rolling update strategy: nebula-operator/11.rolling-update-strategy.md
+#ent
+      - Backup and restore: nebula-operator/10.backup-restore-using-operator.md
+      - Self-healing: nebula-operator/5.operator-failover.md
+      - FAQ: nebula-operator/7.operator-faq.md
 
   - Graph computing:
 
