--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -726,7 +726,7 @@ nav:
 #ent
         - Balance storage data after scaling out: nebula-operator/8.custom-cluster-configurations/8.3.balance-data-when-scaling-storage.md
         - Manage cluster logs: nebula-operator/8.custom-cluster-configurations/8.4.manage-running-logs.md
-      - Upgrade NebulaGraph clusters: nebula-operator/9.upgrade-nebula-cluster.md
+#      - Upgrade NebulaGraph clusters: nebula-operator/9.upgrade-nebula-cluster.md
       - Specify a rolling update strategy: nebula-operator/11.rolling-update-strategy.md
 #ent
       - Backup and restore: nebula-operator/10.backup-restore-using-operator.md
