--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -64,7 +64,7 @@ markdown_extensions:
 
 # Plugins
 plugins:
-#  - search # This is the original mkdocs search plugin. To use algolia search, comment out this plugin.
+  - search # This is the original mkdocs search plugin. To use algolia search, comment out this plugin.
   - macros:
       include_dir: docs-2.0/reuse/
   - git-revision-date-localized
