--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,7 +9,7 @@ repo_url: 'https://github.com/vesoft-inc/nebula'
 copyright: Copyright &copy; 2023 NebulaGraph
 
 # modify
-edit_uri: 'https://github.com/vesoft-inc/nebula-docs/edit/master/docs-2.0/'
+edit_uri: 'https://github.com/vesoft-inc/nebula-docs/edit/v3.6.0/docs-2.0/'
 
 theme:
     name: material
@@ -109,7 +109,7 @@ plugins:
 
   - with-pdf:
       copyright: 2023 Vesoft Inc.
-      cover_subtitle: master
+      cover_subtitle: v3.6.0
       author: Cooper Liang, Abby Huang
       cover: true
       back_cover: true
@@ -150,13 +150,13 @@ extra:
     - icon: 'fontawesome/brands/github'
       link: 'https://github.com/vesoft-inc/nebula-docs'
   nebula:
-    release: 3.5.0
+    release: 3.6.0
     nightly: nightly
     master: master
     base20: 2.0
     base200: 2.0.0
-    branch: release-3.5
-    tag: v3.5.0
+    branch: release-3.6
+    tag: v3.6.0
   studio:
     base111b: 1.1.1-beta
     base220: 2.2.1
@@ -168,13 +168,13 @@ extra:
     branch: release-3.5
     tag: v3.5.1
   exchange_ent:
-    release: 3.5.0
-    branch: release-3.5
-    tag: v3.5.0
+    release: 3.6.0
+    branch: release-3.6
+    tag: v3.6.0
   exchange:
-    release: 3.5.0
-    branch: release-3.5
-    tag: v3.5.0
+    release: 3.6.0
+    branch: release-3.6
+    tag: v3.6.0
   importer:
     release: 4.0.0
     branch: release-4.0
@@ -188,17 +188,17 @@ extra:
     branch: release-3.5
     tag: v3.5.0
   sparkconnector:
-    release: 3.4.0
-    branch: release-3.4
-    tag: v3.4.0
+    release: 3.6.0
+    branch: release-3.6
+    tag: v3.6.0
   flinkconnector:
     release: 3.5.0
     branch: release-3.5
     tag: v3.5.0
   dockercompose:
-    release: 3.5.0
-    branch: release-3.5
-    tag: v3.5.0
+    release: 3.6.0
+    branch: release-3.6
+    tag: v3.6.0
   dashboard:
     release: 3.4.0
     tag: v3.4.0
@@ -247,7 +247,7 @@ extra:
     tag: v1.5.0
     branch: release-1.5
     upgrade_from: 3.5.0
-    upgrade_to: 3.5.x
+    upgrade_to: 3.6.0
   exporter:
     release: 3.3.0
     branch: release-3.3
@@ -726,7 +726,7 @@ nav:
 #ent
         - Balance storage data after scaling out: nebula-operator/8.custom-cluster-configurations/8.3.balance-data-when-scaling-storage.md
         - Manage cluster logs: nebula-operator/8.custom-cluster-configurations/8.4.manage-running-logs.md
-#      - Upgrade NebulaGraph clusters: nebula-operator/9.upgrade-nebula-cluster.md
+      - Upgrade NebulaGraph clusters: nebula-operator/9.upgrade-nebula-cluster.md
       - Specify a rolling update strategy: nebula-operator/11.rolling-update-strategy.md
 #ent
     - Backup and restore: nebula-operator/10.backup-restore-using-operator.md
