add compile using docker
Update 7.compile-using-docker.md

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -459,8 +459,8 @@ nav:
   - Deploy and install:
       - Resource preparations: 4.deployment-and-installation/1.resource-preparations.md
       - Compile and install:
-          - Compile locally: 4.deployment-and-installation/2.compile-and-install-nebula-graph/1.install-nebula-graph-by-compiling-the-source-code.md
-#          - Compile using Docker:
+          - Compile the source: 4.deployment-and-installation/2.compile-and-install-nebula-graph/1.install-nebula-graph-by-compiling-the-source-code.md
+          - Compile using Docker: 4.deployment-and-installation/2.compile-and-install-nebula-graph/7.compile-using-docker.md
       - Local single-node installation:
           - Install using RPM or DEB package: 4.deployment-and-installation/2.compile-and-install-nebula-graph/2.install-nebula-graph-by-rpm-or-deb.md
           - Install using TAR package: 4.deployment-and-installation/2.compile-and-install-nebula-graph/4.install-nebula-graph-from-tar.md
