add-reserved-keywords-in-ent3.6.0

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -266,8 +266,8 @@ extra:
     azureLatestRelease: 3.1.0 # The latest doc version that supports Azure Cloud
     aliyunLatestRelease: 3.1.0 # The latest doc version that supports Alibaba Cloud
   ent:
-    ent_begin: <!-- -->        # change to "<!-- -->" when releasing core-ent
-    ent_end: <!-- -->             # change to "<!-- -->" when releasing core-ent
+    ent_begin: <!--         # change to "<!-- -->" when releasing core-ent
+    ent_end:  -->             # change to "<!-- -->" when releasing core-ent
 
 nav:
   - About: README.md
