hide ent-content in 3.6.0

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -85,18 +85,19 @@ plugins:
         - 3.ngql-guide/6.functions-and-expressions/9.user-defined-functions.md
         # When publishing a version of a document that includes Enterprise Edition, annotation the following page
         # ent.begin
-        # - 3.ngql-guide/6.functions-and-expressions/17.ES-function.md
-        # - 4.deployment-and-installation/deploy-license.md
-        # - 5.configurations-and-logs/2.log-management/audit-log.md
-        # - 7.data-security/1.authentication/4.ldap.md
-        # - nebula-operator/8.custom-cluster-configurations/8.3.balance-data-when-scaling-storage.md
-        # - nebula-operator/10.backup-restore-using-operator.md
-        # - synchronization-and-migration/replication-between-clusters.md
-        # - 20.appendix/release-notes/nebula-ent-release-note.md
-        # - nebula-dashboard-ent/4.cluster-operator/operator/scale.md
-        # - backup-and-restore/nebula-br-ent/*
-        # - 6.monitor-and-metrics/3.bbox/*
-        # - 3.ngql-guide/6.functions-and-expressions/9.user-defined-functions.md
+        - 3.ngql-guide/6.functions-and-expressions/17.ES-function.md
+        - 9.about-license/*
+        - 5.configurations-and-logs/2.log-management/audit-log.md
+        - 7.data-security/1.authentication/4.ldap.md
+        - nebula-operator/8.custom-cluster-configurations/8.3.balance-data-when-scaling-storage.md
+        - nebula-operator/10.backup-restore-using-operator.md
+        - synchronization-and-migration/replication-between-clusters.md
+        - 20.appendix/release-notes/nebula-ent-release-note.md
+        - nebula-dashboard-ent/4.cluster-operator/operator/scale.md
+        - backup-and-restore/nebula-br-ent/*
+        - 6.monitor-and-metrics/3.bbox/*
+        - 3.ngql-guide/6.functions-and-expressions/9.user-defined-functions.md
+        - 3.ngql-guide/8.clauses-and-options/joins.md
         # ent.end
 
         # comm.begin
@@ -285,14 +286,14 @@ nav:
         - Graph Service: 1.introduction/3.nebula-graph-architecture/3.graph-service.md
         - Storage Service:  1.introduction/3.nebula-graph-architecture/4.storage-service.md
   #ent
-  - Licensing: 
-    - Licensing overview: 9.about-license/1.license-overview.md
-    - License management suites: 
-      - Suite overview: 9.about-license/2.license-management-suite/1.suite-overview.md
-      - License Center: 9.about-license/2.license-management-suite/2.license-center.md
-      - License Manager: 9.about-license/2.license-management-suite/3.license-manager.md
-    - Purchase licenses: 9.about-license/3.purchase-license.md
-    - Manage licenses: 9.about-license/4.manage-license.md
+  # - Licensing: 
+  #   - Licensing overview: 9.about-license/1.license-overview.md
+  #   - License management suites: 
+  #     - Suite overview: 9.about-license/2.license-management-suite/1.suite-overview.md
+  #     - License Center: 9.about-license/2.license-management-suite/2.license-center.md
+  #     - License Manager: 9.about-license/2.license-management-suite/3.license-manager.md
+  #   - Purchase licenses: 9.about-license/3.purchase-license.md
+  #   - Manage licenses: 9.about-license/4.manage-license.md
   #ent 
   - Quick start:
       - Deploy NebulaGraph using Docker: 2.quick-start/1.quick-start-workflow.md
@@ -391,6 +392,7 @@ nav:
           - YIELD: 3.ngql-guide/8.clauses-and-options/yield.md
           - WITH: 3.ngql-guide/8.clauses-and-options/with.md
           - UNWIND: 3.ngql-guide/8.clauses-and-options/unwind.md
+#ent      - INNER JOIN: 3.ngql-guide/8.clauses-and-options/joins.md          
 
       - Space statements:
           - CREATE SPACE: 3.ngql-guide/9.space-statements/1.create-space.md
@@ -476,7 +478,7 @@ nav:
           - Upgrade NebulaGraph Community to the latest version: 4.deployment-and-installation/3.upgrade-nebula-graph/upgrade-nebula-graph-to-latest.md
 #          - Upgrade NebulaGraph from v3.x to v3.4 (Community Edition): 4.deployment-and-installation/3.upgrade-nebula-graph/upgrade-nebula-from-300-to-latest.md
 #ent
-          - Upgrade NebulaGraph Enterprise to the latest version: 4.deployment-and-installation/3.upgrade-nebula-graph/upgrade-nebula-ent-from-3.x-3.4.md
+#ent          - Upgrade NebulaGraph Enterprise to the latest version: 4.deployment-and-installation/3.upgrade-nebula-graph/upgrade-nebula-ent-from-3.x-3.4.md
       - Uninstall NebulaGraph: 4.deployment-and-installation/4.uninstall-nebula-graph.md
 
   - Configure and log:
@@ -489,15 +491,15 @@ nav:
       - Log management:
           - Runtime logs: 5.configurations-and-logs/2.log-management/logs.md
 #ent
-          - Audit logs(Enterprise): 5.configurations-and-logs/2.log-management/audit-log.md
+#ent          - Audit logs(Enterprise): 5.configurations-and-logs/2.log-management/audit-log.md
 
   - Monitor:
       - Query NebulaGraph metrics: 6.monitor-and-metrics/1.query-performance-metrics.md
       - RocksDB Statistics: 6.monitor-and-metrics/2.rocksdb-statistics.md
 #ent
-      - Black-box monitoring:
-        - What is black-box monitoring: 6.monitor-and-metrics/3.bbox/3.1.bbox.md
-        - Black-box monitoring tool: 6.monitor-and-metrics/3.bbox/3.2.bbox-reviewer.md
+#ent      - Black-box monitoring:
+#ent        - What is black-box monitoring: 6.monitor-and-metrics/3.bbox/3.1.bbox.md
+#ent       - Black-box monitoring tool: 6.monitor-and-metrics/3.bbox/3.2.bbox-reviewer.md
  
   - Data security:
       - Authentication and authorization:
@@ -505,7 +507,7 @@ nav:
           - User management: 7.data-security/1.authentication/2.management-user.md
           - Roles and privileges: 7.data-security/1.authentication/3.role-list.md
 #ent
-          - OpenLDAP authentication: 7.data-security/1.authentication/4.ldap.md
+#ent          - OpenLDAP authentication: 7.data-security/1.authentication/4.ldap.md
       - SSL: 7.data-security/4.ssl.md
 
   - Backup and restore:
@@ -515,17 +517,17 @@ nav:
         - Use BR to back up data: backup-and-restore/nebula-br/3.br-backup-data.md
         - Use BR to restore data: backup-and-restore/nebula-br/4.br-restore-data.md
 #ent
-      - NebulaGraph BR Enterprise:
-        - What is BR Enterprise: backup-and-restore/nebula-br-ent/1.br-ent-overview.md
-        - Install BR: backup-and-restore/nebula-br-ent/2.install-tools.md
-        - Back up data with BR: backup-and-restore/nebula-br-ent/3.backup-data.md
-        - Restore data with BR: backup-and-restore/nebula-br-ent/4.restore-data.md
-      - Manage snapshots: backup-and-restore/3.manage-snapshot.md
+#ent      - NebulaGraph BR Enterprise:
+#ent        - What is BR Enterprise: backup-and-restore/nebula-br-ent/1.br-ent-overview.md
+#ent        - Install BR: backup-and-restore/nebula-br-ent/2.install-tools.md
+#ent        - Back up data with BR: backup-and-restore/nebula-br-ent/3.backup-data.md
+#ent        - Restore data with BR: backup-and-restore/nebula-br-ent/4.restore-data.md
+#ent      - Manage snapshots: backup-and-restore/3.manage-snapshot.md
 
   - Synchronize and migrate:
       - Load balance: synchronization-and-migration/2.balance-syntax.md
 #ent
-      - Synchronize between two clusters: synchronization-and-migration/replication-between-clusters.md
+#ent      - Synchronize between two clusters: synchronization-and-migration/replication-between-clusters.md
 
   - Best practices:
     - Compaction: 8.service-tuning/compaction.md
@@ -716,7 +718,7 @@ nav:
       - Deploy NebulaGraph Operator: nebula-operator/2.deploy-nebula-operator.md
       - Deploy clusters: 
 #ent    
-        - Deploy LM: nebula-operator/3.deploy-nebula-graph-cluster/3.0.deploy-lm.md     
+#ent        - Deploy LM: nebula-operator/3.deploy-nebula-graph-cluster/3.0.deploy-lm.md     
         - Deploy clusters with Kubectl: nebula-operator/3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md
         - Deploy clusters with Helm: nebula-operator/3.deploy-nebula-graph-cluster/3.2create-cluster-with-helm.md
       - Connect to NebulaGraph databases: nebula-operator/4.connect-to-nebula-graph-service.md
@@ -724,12 +726,12 @@ nav:
         - Custom configuration parameters for a NebulaGraph cluster: nebula-operator/8.custom-cluster-configurations/8.1.custom-conf-parameter.md
         - Reclaim PVs: nebula-operator/8.custom-cluster-configurations/8.2.pv-reclaim.md 
 #ent
-        - Balance storage data after scaling out: nebula-operator/8.custom-cluster-configurations/8.3.balance-data-when-scaling-storage.md
+#ent        - Balance storage data after scaling out: nebula-operator/8.custom-cluster-configurations/8.3.balance-data-when-scaling-storage.md
         - Manage cluster logs: nebula-operator/8.custom-cluster-configurations/8.4.manage-running-logs.md
       - Upgrade NebulaGraph clusters: nebula-operator/9.upgrade-nebula-cluster.md
       - Specify a rolling update strategy: nebula-operator/11.rolling-update-strategy.md
 #ent
-      - Backup and restore: nebula-operator/10.backup-restore-using-operator.md
+#ent      - Backup and restore: nebula-operator/10.backup-restore-using-operator.md
       - Self-healing: nebula-operator/5.operator-failover.md
       - FAQ: nebula-operator/7.operator-faq.md
 
@@ -751,7 +753,7 @@ nav:
       - Release Note:
         - NebulaGraph Community: 20.appendix/release-notes/nebula-comm-release-note.md
 #ent
-        - NebulaGraph Enterprise: 20.appendix/release-notes/nebula-ent-release-note.md
+#ent        - NebulaGraph Enterprise: 20.appendix/release-notes/nebula-ent-release-note.md
         - NebulaGraph Studio: 20.appendix/release-notes/studio-release-note.md
         - NebulaGraph Dashboard Community: 20.appendix/release-notes/dashboard-comm-release-note.md
         - NebulaGraph Dashboard Enterprise: 20.appendix/release-notes/dashboard-ent-release-note.md
