--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -93,7 +93,7 @@ plugins:
         - nebula-operator/10.backup-restore-using-operator.md
         - synchronization-and-migration/replication-between-clusters.md
         - 20.appendix/release-notes/nebula-ent-release-note.md
-        - nebula-dashboard-ent/4.cluster-operator/operator/scale.md
+        - nebula-dashboard-ent/*
         - backup-and-restore/nebula-br-ent/*
         - 6.monitor-and-metrics/3.bbox/*
         - 3.ngql-guide/6.functions-and-expressions/9.user-defined-functions.md
@@ -477,7 +477,6 @@ nav:
       - Upgrade:
           - Upgrade NebulaGraph Community to the latest version: 4.deployment-and-installation/3.upgrade-nebula-graph/upgrade-nebula-graph-to-latest.md
 #          - Upgrade NebulaGraph from v3.x to v3.4 (Community Edition): 4.deployment-and-installation/3.upgrade-nebula-graph/upgrade-nebula-from-300-to-latest.md
-#ent
 #ent          - Upgrade NebulaGraph Enterprise to the latest version: 4.deployment-and-installation/3.upgrade-nebula-graph/upgrade-nebula-ent-from-3.x-3.4.md
       - Uninstall NebulaGraph: 4.deployment-and-installation/4.uninstall-nebula-graph.md
 
@@ -490,23 +489,20 @@ nav:
           - Kernel configurations: 5.configurations-and-logs/1.configurations/6.kernel-config.md
       - Log management:
           - Runtime logs: 5.configurations-and-logs/2.log-management/logs.md
-#ent
 #ent          - Audit logs(Enterprise): 5.configurations-and-logs/2.log-management/audit-log.md
 
   - Monitor:
       - Query NebulaGraph metrics: 6.monitor-and-metrics/1.query-performance-metrics.md
       - RocksDB Statistics: 6.monitor-and-metrics/2.rocksdb-statistics.md
-#ent
 #ent      - Black-box monitoring:
 #ent        - What is black-box monitoring: 6.monitor-and-metrics/3.bbox/3.1.bbox.md
-#ent       - Black-box monitoring tool: 6.monitor-and-metrics/3.bbox/3.2.bbox-reviewer.md
+#ent        - Black-box monitoring tool: 6.monitor-and-metrics/3.bbox/3.2.bbox-reviewer.md
  
   - Data security:
       - Authentication and authorization:
           - Authentication: 7.data-security/1.authentication/1.authentication.md
           - User management: 7.data-security/1.authentication/2.management-user.md
           - Roles and privileges: 7.data-security/1.authentication/3.role-list.md
-#ent
 #ent          - OpenLDAP authentication: 7.data-security/1.authentication/4.ldap.md
       - SSL: 7.data-security/4.ssl.md
 
@@ -516,7 +512,6 @@ nav:
         - Install BR: backup-and-restore/nebula-br/2.compile-br.md
         - Use BR to back up data: backup-and-restore/nebula-br/3.br-backup-data.md
         - Use BR to restore data: backup-and-restore/nebula-br/4.br-restore-data.md
-#ent
 #ent      - NebulaGraph BR Enterprise:
 #ent        - What is BR Enterprise: backup-and-restore/nebula-br-ent/1.br-ent-overview.md
 #ent        - Install BR: backup-and-restore/nebula-br-ent/2.install-tools.md
@@ -526,7 +521,6 @@ nav:
 
   - Synchronize and migrate:
       - Load balance: synchronization-and-migration/2.balance-syntax.md
-#ent
 #ent      - Synchronize between two clusters: synchronization-and-migration/replication-between-clusters.md
 
   - Best practices:
@@ -594,48 +588,48 @@ nav:
       - Connect to Dashboard: nebula-dashboard/3.connect-dashboard.md
       - Use Dashboard: nebula-dashboard/4.use-dashboard.md
       - Monitoring metrics: nebula-dashboard/6.monitor-parameter.md
-
-  - Dashboard (Enterprise):
-      - What is NebulaGraph Dashboard Enterprise Edition: nebula-dashboard-ent/1.what-is-dashboard-ent.md
-      - Deploy Dashboard Enterprise Edition: nebula-dashboard-ent/2.deploy-connect-dashboard-ent.md
-      - Connect to Dashboard: nebula-dashboard-ent/3.connect-dashboard.md
-      - Create and import clusters:
-        - Create clusters: nebula-dashboard-ent/3.create-import-dashboard/1.create-cluster.md
-        - Import clusters: nebula-dashboard-ent/3.create-import-dashboard/2.import-cluster.md
-      - Cluster management:
-        - Cluster overview: nebula-dashboard-ent/4.cluster-operator/1.overview.md
-        - Cluster monitoring: nebula-dashboard-ent/4.cluster-operator/2.monitor.md
-        - Operation: 
-          - Node: nebula-dashboard-ent/4.cluster-operator/operator/node.md
-          - Scale: nebula-dashboard-ent/4.cluster-operator/operator/scale.md
-          - Service: nebula-dashboard-ent/4.cluster-operator/operator/service.md
-          - Config Management: nebula-dashboard-ent/4.cluster-operator/operator/config-management.md
-          - Member management: nebula-dashboard-ent/4.cluster-operator/operator/member-management.md
-          - Version upgrade: nebula-dashboard-ent/4.cluster-operator/operator/version-upgrade.md
-          - Backup and restore: nebula-dashboard-ent/4.cluster-operator/operator/backup-and-restore.md
-        - Analysis:
-          - Slow query analyst: nebula-dashboard-ent/4.cluster-operator/analysis-diagnosis/slow-query-analyst.md
-          - Cluster diagnostics: nebula-dashboard-ent/4.cluster-operator/analysis-diagnosis/cluster-diagnosis.md
-        - Information: 
-          - Information overview: nebula-dashboard-ent/4.cluster-operator/cluster-information/overview-info.md
-          - Job management: nebula-dashboard-ent/4.cluster-operator/cluster-information/job-management.md
-          - Audit log: nebula-dashboard-ent/4.cluster-operator/cluster-information/audit-log.md
-          - Runtime log: nebula-dashboard-ent/4.cluster-operator/cluster-information/runtime-log.md
-        - Notification: nebula-dashboard-ent/4.cluster-operator/9.notification.md
-        - Data Synchronization: nebula-dashboard-ent/4.cluster-operator/7.data-synchronization.md
-        - Operation records: nebula-dashboard-ent/4.cluster-operator/5.operation-record.md
-        - Other settings: nebula-dashboard-ent/4.cluster-operator/6.settings.md
-      - Authority management: nebula-dashboard-ent/5.account-management.md
-      - Task center: nebula-dashboard-ent/10.tasks.md
-      - NebulaGraph Dashboard Enterprise Edition LM: nebula-dashboard-ent/11.license-manager.md
-      - System settings:
-        - System settings: nebula-dashboard-ent/system-settings/system-settings.md
-        - Notification endpoint: nebula-dashboard-ent/system-settings/notification-endpoint.md
-        - Single sign-on: nebula-dashboard-ent/system-settings/single-sign-on.md
-        - Package management: nebula-dashboard-ent/system-settings/manage-package.md
-      - Monitoring metrics: nebula-dashboard-ent/7.monitor-parameter.md
-      - FAQ: nebula-dashboard-ent/8.faq.md
-
+  #ent
+  # - Dashboard (Enterprise):
+  #     - What is NebulaGraph Dashboard Enterprise Edition: nebula-dashboard-ent/1.what-is-dashboard-ent.md
+  #     - Deploy Dashboard Enterprise Edition: nebula-dashboard-ent/2.deploy-connect-dashboard-ent.md
+  #     - Connect to Dashboard: nebula-dashboard-ent/3.connect-dashboard.md
+  #     - Create and import clusters:
+  #       - Create clusters: nebula-dashboard-ent/3.create-import-dashboard/1.create-cluster.md
+  #       - Import clusters: nebula-dashboard-ent/3.create-import-dashboard/2.import-cluster.md
+  #     - Cluster management:
+  #       - Cluster overview: nebula-dashboard-ent/4.cluster-operator/1.overview.md
+  #       - Cluster monitoring: nebula-dashboard-ent/4.cluster-operator/2.monitor.md
+  #       - Operation: 
+  #         - Node: nebula-dashboard-ent/4.cluster-operator/operator/node.md
+  #         - Scale: nebula-dashboard-ent/4.cluster-operator/operator/scale.md
+  #         - Service: nebula-dashboard-ent/4.cluster-operator/operator/service.md
+  #         - Config Management: nebula-dashboard-ent/4.cluster-operator/operator/config-management.md
+  #         - Member management: nebula-dashboard-ent/4.cluster-operator/operator/member-management.md
+  #         - Version upgrade: nebula-dashboard-ent/4.cluster-operator/operator/version-upgrade.md
+  #         - Backup and restore: nebula-dashboard-ent/4.cluster-operator/operator/backup-and-restore.md
+  #       - Analysis:
+  #         - Slow query analyst: nebula-dashboard-ent/4.cluster-operator/analysis-diagnosis/slow-query-analyst.md
+  #         - Cluster diagnostics: nebula-dashboard-ent/4.cluster-operator/analysis-diagnosis/cluster-diagnosis.md
+  #       - Information: 
+  #         - Information overview: nebula-dashboard-ent/4.cluster-operator/cluster-information/overview-info.md
+  #         - Job management: nebula-dashboard-ent/4.cluster-operator/cluster-information/job-management.md
+  #         - Audit log: nebula-dashboard-ent/4.cluster-operator/cluster-information/audit-log.md
+  #         - Runtime log: nebula-dashboard-ent/4.cluster-operator/cluster-information/runtime-log.md
+  #       - Notification: nebula-dashboard-ent/4.cluster-operator/9.notification.md
+  #       - Data Synchronization: nebula-dashboard-ent/4.cluster-operator/7.data-synchronization.md
+  #       - Operation records: nebula-dashboard-ent/4.cluster-operator/5.operation-record.md
+  #       - Other settings: nebula-dashboard-ent/4.cluster-operator/6.settings.md
+  #     - Authority management: nebula-dashboard-ent/5.account-management.md
+  #     - Task center: nebula-dashboard-ent/10.tasks.md
+  #     - NebulaGraph Dashboard Enterprise Edition LM: nebula-dashboard-ent/11.license-manager.md
+  #     - System settings:
+  #       - System settings: nebula-dashboard-ent/system-settings/system-settings.md
+  #       - Notification endpoint: nebula-dashboard-ent/system-settings/notification-endpoint.md
+  #       - Single sign-on: nebula-dashboard-ent/system-settings/single-sign-on.md
+  #       - Package management: nebula-dashboard-ent/system-settings/manage-package.md
+  #     - Monitoring metrics: nebula-dashboard-ent/7.monitor-parameter.md
+  #     - FAQ: nebula-dashboard-ent/8.faq.md
+  #ent
   - Explorer:
     - What is NebulaGraph Explorer: nebula-explorer/about-explorer/ex-ug-what-is-explorer.md
     - Deploy and connect:
@@ -716,8 +710,7 @@ nav:
       - What is NebulaGraph Operator: nebula-operator/1.introduction-to-nebula-operator.md
       - Overview of using NebulaGraph Operator: nebula-operator/6.get-started-with-operator.md
       - Deploy NebulaGraph Operator: nebula-operator/2.deploy-nebula-operator.md
-      - Deploy clusters: 
-#ent    
+      - Deploy clusters:  
 #ent        - Deploy LM: nebula-operator/3.deploy-nebula-graph-cluster/3.0.deploy-lm.md     
         - Deploy clusters with Kubectl: nebula-operator/3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md
         - Deploy clusters with Helm: nebula-operator/3.deploy-nebula-graph-cluster/3.2create-cluster-with-helm.md
@@ -725,12 +718,10 @@ nav:
       - Configure clusters:
         - Custom configuration parameters for a NebulaGraph cluster: nebula-operator/8.custom-cluster-configurations/8.1.custom-conf-parameter.md
         - Reclaim PVs: nebula-operator/8.custom-cluster-configurations/8.2.pv-reclaim.md 
-#ent
 #ent        - Balance storage data after scaling out: nebula-operator/8.custom-cluster-configurations/8.3.balance-data-when-scaling-storage.md
         - Manage cluster logs: nebula-operator/8.custom-cluster-configurations/8.4.manage-running-logs.md
       - Upgrade NebulaGraph clusters: nebula-operator/9.upgrade-nebula-cluster.md
       - Specify a rolling update strategy: nebula-operator/11.rolling-update-strategy.md
-#ent
 #ent      - Backup and restore: nebula-operator/10.backup-restore-using-operator.md
       - Self-healing: nebula-operator/5.operator-failover.md
       - FAQ: nebula-operator/7.operator-faq.md
@@ -752,7 +743,6 @@ nav:
   - Appendix:
       - Release Note:
         - NebulaGraph Community: 20.appendix/release-notes/nebula-comm-release-note.md
-#ent
 #ent        - NebulaGraph Enterprise: 20.appendix/release-notes/nebula-ent-release-note.md
         - NebulaGraph Studio: 20.appendix/release-notes/studio-release-note.md
         - NebulaGraph Dashboard Community: 20.appendix/release-notes/dashboard-comm-release-note.md
